# Bezier-BSpline

./: CHANGELOG.txt  CMakeLists.txt  README.md
bin2c/: target_add_embeded_shaders.cmake
demo/: CMakeLists.txt
demo/d0_hello_triangle/: CMakeLists.txt  main.cpp
demo/d10_advanced_camera/: CMakeLists.txt  main.cpp  shader_d10_vertex.glsl  shaders.h
demo/d11_render_to_texture/: CMakeLists.txt  main.cpp  shader_d11_rtt_fragment.glsl  shader_d11_rtt_vertex.glsl  shader_passthrough.glsl  shaders.h
demo/d12_reordering/: CMakeLists.txt  main.cpp  shader_d12_color.glsl  shader_d12_transform.glsl  shaders.h
demo/d13_shadowmap/: CMakeLists.txt  comm.cpp  comm.hpp  geometry_triangle.cpp  geometry_triangle.h  main_corrected.cpp  main_simple.cpp  shader_d13_corrected.fs.glsl  shader_d13_corrected.vs.glsl  shader_d13_depth_rtt.fs.glsl  shader_d13_depth_rtt.vs.glsl  shader_d13_passthrough.vs.glsl  shader_d13_simple.fs.glsl  shader_d13_simple.vs.glsl  shader_d13_simple_texture.fs.glsl  shaders.h
demo/d14_geometry_shader/: CMakeLists.txt  main.cpp  shader_d14.vs.glsl  shaders.h
demo/d15_tessellation_shader/: CMakeLists.txt  main.cpp  p4_shader_color.glsl  p4_shader_tc.glsl  p4_shader_te.glsl  p4_shader_transform.glsl
demo/d1_glgears/: CMakeLists.txt  main.cpp
demo/d2_imgui/: CMakeLists.txt  main_opengl2.cpp  main_opengl3.cpp
demo/d3_simple_shader/: CMakeLists.txt  main_embeded.cpp  main_file.cpp  shaders.h
demo/d4_matrices/: CMakeLists.txt  main.cpp  shader_d4_transform.glsl  shaders.h
demo/d5_colored_cube/: CMakeLists.txt  main.cpp  shader_d5_vertex.glsl  shaders.h
demo/d6_texture_cube/: CMakeLists.txt  main.cpp  shader_d6_vertex.glsl  shaders.h
demo/d7_point_in_polygon/: CMakeLists.txt  main.cpp
demo/d9_geometries/: CMakeLists.txt  main.cpp  shaders.h
glad-compatible/include/KHR/: khrplatform.h
glad-core-3.3/include/glad/: glad.h
glad-core-3.3/src/: glad.c
glad-core-4.1/include/glad/: glad.h
glad-core-4.1/src/: glad.c
glfw-3.3.2/docs/: quick.dox  window.dox
glfw-3.3.2/docs/html/: glfw3_8h.html  glfw3_8h_source.html  group__context.html  group__window.html  jquery.js  quick_guide.html  window_guide.html
glfw-3.3.2/include/GLFW/: glfw3.h
glfw-3.3.2/src/: context.c  nsgl_context.m  osmesa_context.c
glm-0.9.9.8/doc/api/: a00016.html  a00016_source.html  a00137.html  a00137_source.html  a00300.html  a00314.html
glm-0.9.9.8/glm/gtc/: random.hpp
imgui-1.79/: imgui_demo.cpp
projects/skeleton_p4/: 1BezierCurve.txt  1BsplineCurve.txt  2BezierCurve.txt  2BsplineCurve.txt  3BezierCurve.txt  3BsplineCurve.txt  CMakeLists.txt  gui.cpp  gui.h  helper.cpp  helper.h  imgui.ini  main.cpp  p4_shader_color.glsl  p4_shader_transform.glsl
projects/skeleton_p4/submission/: README.md
util/: CMakeLists.txt  framebuffer.h  pipeline.h  stb_image.h  util.cpp  util.hpp
