add_subdirectory(d0_hello_triangle)
add_subdirectory(d1_glgears)
add_subdirectory(d2_imgui)
add_subdirectory(d3_simple_shader)
add_subdirectory(d4_matrices)
add_subdirectory(d5_colored_cube)
add_subdirectory(d6_texture_cube)
add_subdirectory(d7_point_in_polygon)
# d8 ...
add_subdirectory(d9_geometries)
add_subdirectory(d10_advanced_camera)
add_subdirectory(d11_render_to_texture)
add_subdirectory(d12_reordering)
add_subdirectory(d13_shadowmap)
add_subdirectory(d14_geometry_shader)
add_subdirectory(d15_tessellation_shader)
